--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,17 @@
             <li><a href="#">Item 2</a></li>
           </ul>
         </div>
-        <button type="button" name="button" class="button success">A Button</button>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown button
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </div>
       </div>
     </div>
     <script src="/javascript/application.js" charset="utf-8"></script>
